--- a/public/Night & Day/theme.css
+++ b/public/Night & Day/theme.css
@@ -1,4 +1,4 @@
-*,body,p,h1,h2,h3,html,.gap-y-4,.secondNavBar,#homeIcon{
+*,body,p,h1,h2,h3,html,.gap-y-4,.secondNavBar,#homeIcon:not(#anim){
     transition: all 300ms;
 
 }
@@ -12,7 +12,6 @@ body.darkMode{
 body.lightMode .leading-loose {
     color: #131417;
 }
-
 body.lightMode .text-left {
     color: #414141;
 }
@@ -28,6 +27,12 @@ body.lightMode .secondNavBar {
 body.lightMode .aboutSecondNavBar {
     background-color: rgba(186, 189, 189, 0.575);
 }
+body.lightMode .projectNavBar {
+    background-color: rgba(186, 189, 189, 0.575);
+}
+body.lightMode .toolsNavBar {
+    background-color: rgba(186, 189, 189, 0.575);
+}
 body.lightMode .text-gray-300 {
     color:black;
 }
@@ -37,11 +42,35 @@ body.lightMode .info{
 body.lightMode #myWorks{
     color:rgba(104, 104, 104, 0.445);
 }
+body.lightMode .aboutParagraph{
+    color:rgb(92, 92, 92);
+}
+body.lightMode .bestParagraph{
+    color:rgb(92, 92, 92);
+}
+body.lightMode .regularParagraph{
+    color:rgb(92, 92, 92);
+}
+body.lightMode .myParagraph{
+    color:rgb(92, 92, 92);
+}
+body.lightMode .rounded-3xl{
+    background-color:rgba(226, 226, 226, 0.616);
+}
+body.lightMode .rounded-3xl{
+    color:rgb(7, 7, 7);
+}
+body.lightMode .inner-circle{
+    background-color:rgb(175, 175, 175);
+}
+body.lightMode .select-none{
+    background:rgb(71, 71, 71);
+}
 body.lightMode .fixed:not(.themeButton) {
     background-color: rgb(159, 161, 161);
 }
 
-body.lightMode #homeIcon:not(.firstHomeIcon):not(.secondFirstHomeIcon):not(.secondAboutIcon){
+body.lightMode #homeIcon:not(.firstHomeIcon):not(.secondFirstHomeIcon):not(.secondAboutIcon):not(.secondProjectHomeIcon):not(.toolsHomeIcon){
     background-color: rgb(160, 160, 160);
     display: flex;
     justify-content: center;
