--- a/src/output.css
+++ b/src/output.css
@@ -548,9 +548,6 @@
   .top-5 {
     top: calc(var(--spacing) * 5);
   }
-  .top-\[5\%\] {
-    top: 5%;
-  }
   .top-\[100px\] {
     top: 100px;
   }
@@ -559,6 +556,9 @@
   }
   .top-\[1px\] {
     top: 1px;
+  }
+  .top-\[5\%\] {
+    top: 5%;
   }
   .right-0 {
     right: calc(var(--spacing) * 0);
@@ -586,9 +586,6 @@
   }
   .-z-10 {
     z-index: calc(10 * -1);
-  }
-  .z-0 {
-    z-index: 0;
   }
   .z-20 {
     z-index: 20;
@@ -619,9 +616,6 @@
   }
   .mx-auto {
     margin-inline: auto;
-  }
-  .mt-1 {
-    margin-top: calc(var(--spacing) * 1);
   }
   .mt-2 {
     margin-top: calc(var(--spacing) * 2);
@@ -703,6 +697,9 @@
     width: 100%;
     height: 100%;
   }
+  .h-9 {
+    height: calc(var(--spacing) * 9);
+  }
   .h-20 {
     height: calc(var(--spacing) * 20);
   }
@@ -712,11 +709,38 @@
   .h-56 {
     height: calc(var(--spacing) * 56);
   }
+  .h-96 {
+    height: calc(var(--spacing) * 96);
+  }
+  .h-\[0px\] {
+    height: 0px;
+  }
+  .h-\[200\] {
+    height: 200;
+  }
+  .h-\[20\] {
+    height: 20;
+  }
+  .h-\[2\] {
+    height: 2;
+  }
+  .h-\[100px\] {
+    height: 100px;
+  }
+  .h-\[10px\] {
+    height: 10px;
+  }
+  .h-\[90px\] {
+    height: 90px;
+  }
   .h-\[200px\] {
     height: 200px;
   }
   .h-\[300\%\] {
     height: 300%;
+  }
+  .h-fit {
+    height: fit-content;
   }
   .h-full {
     height: 100%;
@@ -786,6 +810,9 @@
   .justify-start {
     justify-content: flex-start;
   }
+  .gap-3 {
+    gap: calc(var(--spacing) * 3);
+  }
   .gap-x-2 {
     column-gap: calc(var(--spacing) * 2);
   }
@@ -833,9 +860,6 @@
   .overflow-x-hidden {
     overflow-x: hidden;
   }
-  .rounded {
-    border-radius: 0.25rem;
-  }
   .rounded-2xl {
     border-radius: var(--radius-2xl);
   }
@@ -882,9 +906,6 @@
   .bg-\[\#252525\] {
     background-color: #252525;
   }
-  .bg-\[\#2B2A2A\] {
-    background-color: #2B2A2A;
-  }
   .bg-\[\#2E2C29\] {
     background-color: #2E2C29;
   }
@@ -903,17 +924,8 @@
   .object-cover {
     object-fit: cover;
   }
-  .p-1 {
-    padding: calc(var(--spacing) * 1);
-  }
-  .p-10 {
-    padding: calc(var(--spacing) * 10);
-  }
   .p-14 {
     padding: calc(var(--spacing) * 14);
-  }
-  .p-16 {
-    padding: calc(var(--spacing) * 16);
   }
   .p-\[13px\] {
     padding: 13px;
@@ -951,9 +963,6 @@
   .pt-2 {
     padding-top: calc(var(--spacing) * 2);
   }
-  .pt-3 {
-    padding-top: calc(var(--spacing) * 3);
-  }
   .pt-4 {
     padding-top: calc(var(--spacing) * 4);
   }
@@ -966,20 +975,11 @@
   .pt-16 {
     padding-top: calc(var(--spacing) * 16);
   }
-  .pt-23 {
-    padding-top: calc(var(--spacing) * 23);
-  }
   .pr-20 {
     padding-right: calc(var(--spacing) * 20);
   }
   .pb-2 {
     padding-bottom: calc(var(--spacing) * 2);
-  }
-  .pb-3 {
-    padding-bottom: calc(var(--spacing) * 3);
-  }
-  .pb-6 {
-    padding-bottom: calc(var(--spacing) * 6);
   }
   .pb-7 {
     padding-bottom: calc(var(--spacing) * 7);
@@ -995,9 +995,6 @@
   }
   .pb-36 {
     padding-bottom: calc(var(--spacing) * 36);
-  }
-  .pb-60 {
-    padding-bottom: calc(var(--spacing) * 60);
   }
   .pb-\[100px\] {
     padding-bottom: 100px;
@@ -1327,6 +1324,11 @@
       left: 5%;
     }
   }
+  .md\:mx-2 {
+    @media (width >= 48rem) {
+      margin-inline: calc(var(--spacing) * 2);
+    }
+  }
   .md\:ml-10 {
     @media (width >= 48rem) {
       margin-left: calc(var(--spacing) * 10);
@@ -1402,6 +1404,11 @@
       justify-content: center;
     }
   }
+  .md\:gap-x-5 {
+    @media (width >= 48rem) {
+      column-gap: calc(var(--spacing) * 5);
+    }
+  }
   .md\:pt-5 {
     @media (width >= 48rem) {
       padding-top: calc(var(--spacing) * 5);
@@ -1410,6 +1417,11 @@
   .md\:pt-16 {
     @media (width >= 48rem) {
       padding-top: calc(var(--spacing) * 16);
+    }
+  }
+  .md\:pr-20 {
+    @media (width >= 48rem) {
+      padding-right: calc(var(--spacing) * 20);
     }
   }
   .md\:pb-0 {
