--- a/src/output.css
+++ b/src/output.css
@@ -524,6 +524,9 @@
   .collapse {
     visibility: collapse;
   }
+  .visible {
+    visibility: visible;
+  }
   .absolute {
     position: absolute;
   }
@@ -548,6 +551,9 @@
   .top-5 {
     top: calc(var(--spacing) * 5);
   }
+  .top-\[5\%\] {
+    top: 5%;
+  }
   .top-\[100px\] {
     top: 100px;
   }
@@ -556,9 +562,6 @@
   }
   .top-\[1px\] {
     top: 1px;
-  }
-  .top-\[5\%\] {
-    top: 5%;
   }
   .right-0 {
     right: calc(var(--spacing) * 0);
@@ -697,6 +700,9 @@
     width: 100%;
     height: 100%;
   }
+  .h-5 {
+    height: calc(var(--spacing) * 5);
+  }
   .h-9 {
     height: calc(var(--spacing) * 9);
   }
@@ -711,6 +717,9 @@
   }
   .h-96 {
     height: calc(var(--spacing) * 96);
+  }
+  .h-\[00px\] {
+    height: 00px;
   }
   .h-\[0px\] {
     height: 0px;
@@ -739,6 +748,9 @@
   .h-\[300\%\] {
     height: 300%;
   }
+  .h-\[300px\] {
+    height: 300px;
+  }
   .h-fit {
     height: fit-content;
   }
@@ -751,14 +763,26 @@
   .w-72 {
     width: calc(var(--spacing) * 72);
   }
+  .w-\[1\] {
+    width: 1;
+  }
   .w-\[60\%\] {
     width: 60%;
   }
   .w-\[200px\] {
     width: 200px;
   }
+  .w-\[400\] {
+    width: 400;
+  }
   .w-\[400px\] {
     width: 400px;
+  }
+  .w-\[40\] {
+    width: 40;
+  }
+  .w-\[4\] {
+    width: 4;
   }
   .w-full {
     width: 100%;
@@ -857,8 +881,17 @@
   .overflow-hidden {
     overflow: hidden;
   }
+  .overflow-scroll {
+    overflow: scroll;
+  }
+  .overflow-visible {
+    overflow: visible;
+  }
   .overflow-x-hidden {
     overflow-x: hidden;
+  }
+  .rounded {
+    border-radius: 0.25rem;
   }
   .rounded-2xl {
     border-radius: var(--radius-2xl);
@@ -1347,6 +1380,11 @@
   .md\:h-\[90\%\] {
     @media (width >= 48rem) {
       height: 90%;
+    }
+  }
+  .md\:h-\[90px\] {
+    @media (width >= 48rem) {
+      height: 90px;
     }
   }
   .md\:h-\[200\%\] {
