--- a/src/output.css
+++ b/src/output.css
@@ -730,6 +730,9 @@
   .h-\[20\] {
     height: 20;
   }
+  .h-\[20px\] {
+    height: 20px;
+  }
   .h-\[2\] {
     height: 2;
   }
@@ -744,6 +747,9 @@
   }
   .h-\[200px\] {
     height: 200px;
+  }
+  .h-\[220px\] {
+    height: 220px;
   }
   .h-\[300\%\] {
     height: 300%;
