--- a/public/Night & Day/theme.css
+++ b/public/Night & Day/theme.css
@@ -1,5 +1,14 @@
 /* General settings for animation and transitions */
-*, body, p, h1, h2, h3, html, .gap-y-4, .secondNavBar, #homeIcon:not(#anim) {
+*,
+body,
+p,
+h1,
+h2,
+h3,
+html,
+.gap-y-4,
+.secondNavBar,
+#homeIcon:not(#anim) {
     transition: all 300ms;
 }
 
@@ -70,6 +79,14 @@ body.lightMode .inner-circle {
 
 body.lightMode .select-none {
     background: rgb(71, 71, 71);
+}
+
+body.lightMode .or {
+    color: black;
+}
+
+body.darkMode .or {
+    color:white;
 }
 
 /* Home icon settings */
