--- a/src/output.css
+++ b/src/output.css
@@ -536,11 +536,89 @@
   .relative {
     position: relative;
   }
+  .inset-0 {
+    inset: calc(var(--spacing) * 0);
+  }
   .-top-10 {
     top: calc(var(--spacing) * -10);
   }
+  .-top-\[0\%\] {
+    top: calc(0% * -1);
+  }
+  .-top-\[00px\] {
+    top: calc(00px * -1);
+  }
+  .-top-\[20px\] {
+    top: calc(20px * -1);
+  }
+  .-top-\[90\%\] {
+    top: calc(90% * -1);
+  }
+  .-top-\[300px\] {
+    top: calc(300px * -1);
+  }
+  .-top-\[1000px\] {
+    top: calc(1000px * -1);
+  }
+  .-top-\[100px\] {
+    top: calc(100px * -1);
+  }
+  .-top-\[10\] {
+    top: calc(10 * -1);
+  }
+  .-top-\[1\] {
+    top: calc(1 * -1);
+  }
+  .-top-\[20\%\] {
+    top: calc(20% * -1);
+  }
+  .-top-\[200\] {
+    top: calc(200 * -1);
+  }
+  .-top-\[200px\] {
+    top: calc(200px * -1);
+  }
+  .-top-\[20\] {
+    top: calc(20 * -1);
+  }
+  .-top-\[2\] {
+    top: calc(2 * -1);
+  }
+  .-top-\[30\%\] {
+    top: calc(30% * -1);
+  }
+  .-top-\[900\] {
+    top: calc(900 * -1);
+  }
+  .-top-\[90\] {
+    top: calc(90 * -1);
+  }
+  .-top-\[9\] {
+    top: calc(9 * -1);
+  }
+  .-top-\[10\%\] {
+    top: calc(10% * -1);
+  }
+  .-top-\[50\%\] {
+    top: calc(50% * -1);
+  }
+  .-top-\[60\%\] {
+    top: calc(60% * -1);
+  }
+  .-top-\[80\%\] {
+    top: calc(80% * -1);
+  }
   .-top-\[190\%\] {
     top: calc(190% * -1);
+  }
+  .-top-\[400px\] {
+    top: calc(400px * -1);
+  }
+  .-top-\[900px\] {
+    top: calc(900px * -1);
+  }
+  .-top-\[z00px\] {
+    top: calc(z00px * -1);
   }
   .top-0 {
     top: calc(var(--spacing) * 0);
@@ -551,11 +629,14 @@
   .top-5 {
     top: calc(var(--spacing) * 5);
   }
-  .top-\[19px\] {
-    top: 19px;
+  .top-\[0\%\] {
+    top: 0%;
   }
-  .top-\[1px\] {
-    top: 1px;
+  .top-\[0\] {
+    top: 0;
+  }
+  .top-\[0px\] {
+    top: 0px;
   }
   .top-\[5\%\] {
     top: 5%;
@@ -563,14 +644,170 @@
   .top-\[100px\] {
     top: 100px;
   }
+  .top-\[19px\] {
+    top: 19px;
+  }
+  .top-\[1px\] {
+    top: 1px;
+  }
+  .top-\[2px\] {
+    top: 2px;
+  }
+  .top-\[8\] {
+    top: 8;
+  }
+  .top-\[10\%\] {
+    top: 10%;
+  }
+  .top-\[30px\] {
+    top: 30px;
+  }
+  .top-\[50px\] {
+    top: 50px;
+  }
+  .top-\[80\] {
+    top: 80;
+  }
+  .top-\[1000px\] {
+    top: 1000px;
+  }
+  .top-\[10px\] {
+    top: 10px;
+  }
+  .top-\[60\%\] {
+    top: 60%;
+  }
+  .top-\[80\%\] {
+    top: 80%;
+  }
+  .top-\[200px\] {
+    top: 200px;
+  }
+  .top-\[20px\] {
+    top: 20px;
+  }
+  .top-\[px\] {
+    top: px;
+  }
+  .-right-0 {
+    right: calc(var(--spacing) * -0);
+  }
+  .-right-1 {
+    right: calc(var(--spacing) * -1);
+  }
+  .-right-9 {
+    right: calc(var(--spacing) * -9);
+  }
+  .-right-10 {
+    right: calc(var(--spacing) * -10);
+  }
+  .-right-12 {
+    right: calc(var(--spacing) * -12);
+  }
   .right-0 {
     right: calc(var(--spacing) * 0);
+  }
+  .right-1 {
+    right: calc(var(--spacing) * 1);
+  }
+  .right-2 {
+    right: calc(var(--spacing) * 2);
+  }
+  .right-3 {
+    right: calc(var(--spacing) * 3);
   }
   .right-5 {
     right: calc(var(--spacing) * 5);
   }
+  .right-16 {
+    right: calc(var(--spacing) * 16);
+  }
+  .right-20 {
+    right: calc(var(--spacing) * 20);
+  }
+  .right-23 {
+    right: calc(var(--spacing) * 23);
+  }
+  .right-24 {
+    right: calc(var(--spacing) * 24);
+  }
+  .right-28 {
+    right: calc(var(--spacing) * 28);
+  }
+  .right-29 {
+    right: calc(var(--spacing) * 29);
+  }
+  .right-32 {
+    right: calc(var(--spacing) * 32);
+  }
+  .right-36 {
+    right: calc(var(--spacing) * 36);
+  }
+  .right-\[00px\] {
+    right: 00px;
+  }
   .right-\[0px\] {
     right: 0px;
+  }
+  .right-\[9\] {
+    right: 9;
+  }
+  .right-\[10-px\] {
+    right: 10-px;
+  }
+  .right-\[100px\] {
+    right: 100px;
+  }
+  .right-\[12px\] {
+    right: 12px;
+  }
+  .right-\[90px\] {
+    right: 90px;
+  }
+  .right-\[112\] {
+    right: 112;
+  }
+  .right-\[112px\] {
+    right: 112px;
+  }
+  .right-\[11\] {
+    right: 11;
+  }
+  .right-\[102px\] {
+    right: 102px;
+  }
+  .right-\[10px\] {
+    right: 10px;
+  }
+  .right-\[1\] {
+    right: 1;
+  }
+  .right-\[20px\] {
+    right: 20px;
+  }
+  .right-\[600px\] {
+    right: 600px;
+  }
+  .right-\[60px\] {
+    right: 60px;
+  }
+  .right-\[80px\] {
+    right: 80px;
+  }
+  .right-\[90\] {
+    right: 90;
+  }
+  .right-\[110px\] {
+    right: 110px;
+  }
+  .right-\[120px\] {
+    right: 120px;
+  }
+  .-bottom-0 {
+    bottom: calc(var(--spacing) * -0);
+  }
+  .-bottom-2 {
+    bottom: calc(var(--spacing) * -2);
   }
   .bottom-0 {
     bottom: calc(var(--spacing) * 0);
@@ -631,6 +868,9 @@
   }
   .mr-3 {
     margin-right: calc(var(--spacing) * 3);
+  }
+  .mb-4 {
+    margin-bottom: calc(var(--spacing) * 4);
   }
   .block {
     display: block;
@@ -700,59 +940,44 @@
     width: 100%;
     height: 100%;
   }
+  .h-2 {
+    height: calc(var(--spacing) * 2);
+  }
+  .h-3 {
+    height: calc(var(--spacing) * 3);
+  }
+  .h-4 {
+    height: calc(var(--spacing) * 4);
+  }
   .h-5 {
     height: calc(var(--spacing) * 5);
-  }
-  .h-9 {
-    height: calc(var(--spacing) * 9);
   }
   .h-20 {
     height: calc(var(--spacing) * 20);
   }
+  .h-24 {
+    height: calc(var(--spacing) * 24);
+  }
+  .h-28 {
+    height: calc(var(--spacing) * 28);
+  }
+  .h-32 {
+    height: calc(var(--spacing) * 32);
+  }
   .h-48 {
     height: calc(var(--spacing) * 48);
+  }
+  .h-52 {
+    height: calc(var(--spacing) * 52);
   }
   .h-56 {
     height: calc(var(--spacing) * 56);
   }
-  .h-96 {
-    height: calc(var(--spacing) * 96);
-  }
-  .h-\[00px\] {
-    height: 00px;
-  }
-  .h-\[0px\] {
-    height: 0px;
-  }
-  .h-\[10px\] {
-    height: 10px;
-  }
-  .h-\[200\] {
-    height: 200;
-  }
-  .h-\[20\] {
-    height: 20;
-  }
-  .h-\[20px\] {
-    height: 20px;
-  }
-  .h-\[2\] {
-    height: 2;
-  }
-  .h-\[90px\] {
-    height: 90px;
-  }
-  .h-\[100px\] {
-    height: 100px;
+  .h-64 {
+    height: calc(var(--spacing) * 64);
   }
   .h-\[200px\] {
     height: 200px;
-  }
-  .h-\[220px\] {
-    height: 220px;
-  }
-  .h-\[230px\] {
-    height: 230px;
   }
   .h-\[250px\] {
     height: 250px;
@@ -760,23 +985,35 @@
   .h-\[300\%\] {
     height: 300%;
   }
-  .h-\[300px\] {
-    height: 300px;
-  }
-  .h-fit {
-    height: fit-content;
-  }
   .h-full {
     height: 100%;
   }
   .h-screen {
     height: 100vh;
   }
+  .w-0 {
+    width: calc(var(--spacing) * 0);
+  }
+  .w-5 {
+    width: calc(var(--spacing) * 5);
+  }
+  .w-6 {
+    width: calc(var(--spacing) * 6);
+  }
+  .w-9 {
+    width: calc(var(--spacing) * 9);
+  }
+  .w-56 {
+    width: calc(var(--spacing) * 56);
+  }
+  .w-64 {
+    width: calc(var(--spacing) * 64);
+  }
   .w-72 {
     width: calc(var(--spacing) * 72);
   }
-  .w-\[1\] {
-    width: 1;
+  .w-96 {
+    width: calc(var(--spacing) * 96);
   }
   .w-\[60\%\] {
     width: 60%;
@@ -784,17 +1021,11 @@
   .w-\[200px\] {
     width: 200px;
   }
-  .w-\[400\] {
-    width: 400;
-  }
   .w-\[400px\] {
     width: 400px;
   }
-  .w-\[40\] {
-    width: 40;
-  }
-  .w-\[4\] {
-    width: 4;
+  .w-fit {
+    width: fit-content;
   }
   .w-full {
     width: 100%;
@@ -818,12 +1049,6 @@
   }
   .animate-bounce {
     animation: var(--animate-bounce);
-  }
-  .animate-ping {
-    animation: var(--animate-ping);
-  }
-  .animate-pulse {
-    animation: var(--animate-pulse);
   }
   .animate-spin {
     animation: var(--animate-spin);
@@ -902,9 +1127,6 @@
   .overflow-hidden {
     overflow: hidden;
   }
-  .overflow-scroll {
-    overflow: scroll;
-  }
   .overflow-visible {
     overflow: visible;
   }
@@ -926,11 +1148,20 @@
   .rounded-full {
     border-radius: calc(infinity * 1px);
   }
+  .rounded-xl {
+    border-radius: var(--radius-xl);
+  }
   .rounded-tl-2xl {
     border-top-left-radius: var(--radius-2xl);
   }
   .rounded-tl-\[30px\] {
     border-top-left-radius: 30px;
+  }
+  .rounded-tl-lg {
+    border-top-left-radius: var(--radius-lg);
+  }
+  .rounded-tl-xl {
+    border-top-left-radius: var(--radius-xl);
   }
   .rounded-tr-2xl {
     border-top-right-radius: var(--radius-2xl);
@@ -938,9 +1169,34 @@
   .rounded-tr-\[30px\] {
     border-top-right-radius: 30px;
   }
+  .rounded-tr-lg {
+    border-top-right-radius: var(--radius-lg);
+  }
+  .rounded-b {
+    border-bottom-right-radius: 0.25rem;
+    border-bottom-left-radius: 0.25rem;
+  }
+  .rounded-br {
+    border-bottom-right-radius: 0.25rem;
+  }
+  .rounded-br-lg {
+    border-bottom-right-radius: var(--radius-lg);
+  }
+  .rounded-br-xl {
+    border-bottom-right-radius: var(--radius-xl);
+  }
+  .rounded-bl-lg {
+    border-bottom-left-radius: var(--radius-lg);
+  }
+  .rounded-bl-xl {
+    border-bottom-left-radius: var(--radius-xl);
+  }
   .border {
     border-style: var(--tw-border-style);
     border-width: 1px;
+  }
+  .bg-\[\#111113\] {
+    background-color: #111113;
   }
   .bg-\[\#131414\] {
     background-color: #131414;
@@ -966,8 +1222,23 @@
   .bg-\[\#fff\] {
     background-color: #fff;
   }
+  .bg-black {
+    background-color: var(--color-black);
+  }
+  .bg-blue-600 {
+    background-color: var(--color-blue-600);
+  }
+  .bg-gray-300 {
+    background-color: var(--color-gray-300);
+  }
+  .bg-green-800 {
+    background-color: var(--color-green-800);
+  }
   .bg-primary {
     background-color: var(--color-primary);
+  }
+  .bg-red-700 {
+    background-color: var(--color-red-700);
   }
   .bg-slate-900 {
     background-color: var(--color-slate-900);
@@ -977,6 +1248,12 @@
   }
   .object-cover {
     object-fit: cover;
+  }
+  .p-2 {
+    padding: calc(var(--spacing) * 2);
+  }
+  .p-6 {
+    padding: calc(var(--spacing) * 6);
   }
   .p-14 {
     padding: calc(var(--spacing) * 14);
@@ -992,6 +1269,9 @@
   }
   .px-10 {
     padding-inline: calc(var(--spacing) * 10);
+  }
+  .py-2 {
+    padding-block: calc(var(--spacing) * 2);
   }
   .py-3 {
     padding-block: calc(var(--spacing) * 3);
@@ -1032,14 +1312,26 @@
   .pr-20 {
     padding-right: calc(var(--spacing) * 20);
   }
+  .pb-1 {
+    padding-bottom: calc(var(--spacing) * 1);
+  }
   .pb-2 {
     padding-bottom: calc(var(--spacing) * 2);
+  }
+  .pb-5 {
+    padding-bottom: calc(var(--spacing) * 5);
+  }
+  .pb-6 {
+    padding-bottom: calc(var(--spacing) * 6);
   }
   .pb-7 {
     padding-bottom: calc(var(--spacing) * 7);
   }
   .pb-10 {
     padding-bottom: calc(var(--spacing) * 10);
+  }
+  .pb-20 {
+    padding-bottom: calc(var(--spacing) * 20);
   }
   .pb-24 {
     padding-bottom: calc(var(--spacing) * 24);
@@ -1085,6 +1377,10 @@
     font-size: var(--text-7xl);
     line-height: var(--tw-leading, var(--text-7xl--line-height));
   }
+  .text-lg {
+    font-size: var(--text-lg);
+    line-height: var(--tw-leading, var(--text-lg--line-height));
+  }
   .text-xl {
     font-size: var(--text-xl);
     line-height: var(--tw-leading, var(--text-xl--line-height));
@@ -1098,12 +1394,6 @@
   }
   .text-\[25px\] {
     font-size: 25px;
-  }
-  .text-\[2px\] {
-    font-size: 2px;
-  }
-  .text-\[30px\] {
-    font-size: 30px;
   }
   .leading-loose {
     --tw-leading: var(--leading-loose);
@@ -1132,8 +1422,20 @@
   .text-gray-300 {
     color: var(--color-gray-300);
   }
+  .text-green-500 {
+    color: var(--color-green-500);
+  }
+  .text-green-700 {
+    color: var(--color-green-700);
+  }
   .text-primary {
     color: var(--color-primary);
+  }
+  .text-red-50 {
+    color: var(--color-red-50);
+  }
+  .text-red-500 {
+    color: var(--color-red-500);
   }
   .text-white {
     color: var(--color-white);
@@ -1160,6 +1462,10 @@
   }
   .shadow {
     --tw-shadow: 0 1px 3px 0 var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 1px 2px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
+    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+  }
+  .shadow-lg {
+    --tw-shadow: 0 10px 15px -3px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 4px 6px -4px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
   .shadow-md {
@@ -1221,6 +1527,14 @@
     transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to, opacity, box-shadow, transform, translate, scale, rotate, filter, -webkit-backdrop-filter, backdrop-filter;
     transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
     transition-duration: var(--tw-duration, var(--default-transition-duration));
+  }
+  .duration-7 {
+    --tw-duration: 7ms;
+    transition-duration: 7ms;
+  }
+  .duration-75 {
+    --tw-duration: 75ms;
+    transition-duration: 75ms;
   }
   .duration-100 {
     --tw-duration: 100ms;
@@ -1382,6 +1696,16 @@
       top: 50px;
     }
   }
+  .md\:-right-9 {
+    @media (width >= 48rem) {
+      right: calc(var(--spacing) * -9);
+    }
+  }
+  .md\:right-0 {
+    @media (width >= 48rem) {
+      right: calc(var(--spacing) * 0);
+    }
+  }
   .md\:-left-\[30\%\] {
     @media (width >= 48rem) {
       left: calc(30% * -1);
@@ -1492,11 +1816,6 @@
       padding-top: calc(var(--spacing) * 16);
     }
   }
-  .md\:pr-20 {
-    @media (width >= 48rem) {
-      padding-right: calc(var(--spacing) * 20);
-    }
-  }
   .md\:pb-0 {
     @media (width >= 48rem) {
       padding-bottom: calc(var(--spacing) * 0);
@@ -1562,49 +1881,14 @@
       text-align: left;
     }
   }
-  .lg\:text-\[0px\] {
-    @media (width >= 64rem) {
-      font-size: 0px;
-    }
-  }
   .lg\:text-\[39px\] {
     @media (width >= 64rem) {
       font-size: 39px;
     }
   }
-  .lg\:text-\[3px\] {
-    @media (width >= 64rem) {
-      font-size: 3px;
-    }
-  }
-  .lg\:text-\[40px\] {
-    @media (width >= 64rem) {
-      font-size: 40px;
-    }
-  }
-  .lg\:text-\[4px\] {
-    @media (width >= 64rem) {
-      font-size: 4px;
-    }
-  }
   .lg\:text-\[50px\] {
     @media (width >= 64rem) {
       font-size: 50px;
-    }
-  }
-  .lg\:text-\[5px\] {
-    @media (width >= 64rem) {
-      font-size: 5px;
-    }
-  }
-  .lg\:text-\[5\*\:px\] {
-    @media (width >= 64rem) {
-      color: 5*:px;
-    }
-  }
-  .lg\:text-\[px\] {
-    @media (width >= 64rem) {
-      color: px;
     }
   }
   .lg\:before\:bottom-8 {
