--- a/public/Night & Day/theme.css
+++ b/public/Night & Day/theme.css
@@ -88,11 +88,18 @@ body.lightMode .or {
     transition: all 300ms;
 }
 
-body.darkMode .or {
-    color:white;
+body.darkMode .themeButton {
+    color: black;
+    background-color: white;
     transition: all 300ms;
     
 }
+body.lightMode .themeButton {
+    color: white;
+    background-color: black;
+    transition: all 300ms;
+}
+
 body.lightMode .personal {
     color: black;
     transition: all 300ms;
@@ -102,7 +109,10 @@ body.darkMode .personal {
     color:white;
     transition: all 300ms;
 }
-
+body.lightMode .information {
+    color: #f3aa00;
+    transition: all 300ms;
+}
 /* Home icon settings */
 body.lightMode #homeIcon:not(.firstHomeIcon):not(.secondFirstHomeIcon):not(.secondAboutIcon):not(.secondProjectHomeIcon):not(.toolsHomeIcon) {
     background-color: rgb(160, 160, 160);
